--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "puppeteer": "^19.4.1",
+    "puppeteer-core": "^19.4.1",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
 }
